# orion3-sdr-console

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: appearance-todo.md  architecture.md  cat-command-reference.md  phase0-latency.md  phase0-sdr.md
packaging/: tentec-console.desktop
resources/: README  resources.qrc
src/app/: Bands.h  MainWindow.cpp  MainWindow.h  MainWindowInternal.h  MainWindowOps.cpp  MainWindowTools.cpp  MainWindowTuning.cpp  main.cpp
src/audio/: ClipDeck.cpp  ClipDeck.h  SpectralNr.cpp  SpectralNr.h
src/cw/: AudioCwSource.cpp  AudioCwSource.h  CwDecoder.cpp  CwDecoder.h  CwWindow.cpp  CwWindow.h  FldigiCwEngine.cpp  FldigiCwEngine.h  SkimServer.cpp  SkimServer.h  SkimmerEngine.cpp  SkimmerEngine.h  WinKeyer.cpp  WinKeyer.h
src/dsp/: Fft.cpp  Fft.h  PitchTrim.h  SpectrumComputer.cpp  SpectrumComputer.h
src/net/: FldigiClient.cpp  FldigiClient.h  PotaClient.cpp  PotaClient.h  RigctldServer.cpp  RigctldServer.h  RotorClient.cpp  RotorClient.h  SolarClient.cpp  SolarClient.h  SpotClient.cpp  SpotClient.h
src/radio/: RadioController.h  RipAudio.cpp  RipAudio.h  SerialPort.cpp  SerialPort.h  TenTecOmni7.cpp  TenTecOmni7.h  TenTecOrion.cpp  TenTecOrion.h
src/sdr/: AutoGain.h  IqRecorder.cpp  IqRecorder.h  SdrPlaySource.cpp  SdrPlaySource.h  SdrSource.h
src/ui/: AudioPanel.cpp  AudioPanel.h  ControlPanel.cpp  ControlPanel.h  DigiWindow.cpp  DigiWindow.h  DisplayPanel.cpp  DisplayPanel.h  FrequencyDisplay.cpp  FrequencyDisplay.h  PanadapterWidget.cpp  PanadapterWidget.h  RoutingPanel.cpp  RoutingPanel.h  SMeterWidget.cpp  SMeterWidget.h  SetupDialog.cpp  SetupDialog.h  SkimmerWindow.cpp  SkimmerWindow.h  TxBar.cpp  TxBar.h
src/util/: CtyLookup.cpp  CtyLookup.h  LogbookIndex.cpp  LogbookIndex.h  WatchList.cpp  WatchList.h
tests/: autogaintest.cpp  cohtest.cpp  cwtest.cpp  fake_fldigi.py  fldigitest.cpp  nrtest.cpp  rotortest.cpp  skimreplay.cpp  skimsrvtest.cpp  skimtest.cpp  trimtest.cpp  watchtest.cpp
tools/: cat_probe.c  latency_probe.c  notch_probe.sh  omni7_ruler.py  omni7_ruler_baseline.txt  sdr_probe.cpp
